# trip-finder

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: publish.yaml  test.yaml  validate.yaml
core/: settings.py  urls.py
flights/: admin.py  forms.py  models.py  urls.py  views.py
flights/migrations/: 0001_initial.py  0002_airport_unmanaged.py
flights/services/: flight_client.py  search.py  trip_finder.py  utils.py
flights/templates/flights/: base.html  index.html  results.html
flights/tests/: test_flight_client.py  test_forms.py  test_integration.py  test_models.py  test_trip_finder.py  test_utils.py  test_views.py
flights/tests/fixtures/: calendar_arn_bru_202604.json  direct_arn_bru.json
