[tool.poetry]
name = "flight-finder"
version = "2.0.0"
description = ""
authors = ["anvl"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
requests = "^2.33.0"
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.5"
black = "^26.3.1"
ruff = "^0.15.7"
responses = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["flights"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
